# swirl-hpc

./: README.md  pyproject.toml  swirl_defaults.toml
src/swirlhpc/: __init__.py  calibration.py  cli.py  config.py  flow.py  odim.py  pipeline.py  winds.py
