[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "swirlhpc"
version = "0.1.0"
description = "Run the SWIRL radar wind retrieval pipeline on NCI Gadi HPC"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Valentin Louf", email = "valentin.louf@bom.gov.au"},
]
dependencies = [
    "aura",
    "h5py",
    "numpy",
    "pandas",
    "netCDF4",
    "pyproj",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
plot = ["matplotlib"]
dev = ["pytest", "matplotlib"]

[project.scripts]
swirl-run = "swirlhpc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
